--- a/css/git.css
+++ b/css/git.css
@@ -60,7 +60,9 @@ body {
 
 h1 {
   position: relative;
-  margin-top: 25%;
+  /*margin-top: 25%;*/
+  top: 50%;
+  transform: translateY(-50%);
   font-family: "Didot";
   font-size: 60px;
   color: white;
@@ -77,17 +79,45 @@ h1 {
 }
 
 p {
-  min-width: 600px;
-  margin-top: 25%;
+  /*position: relative;
+  top: 50%;
+  transform: translateY(-50%);*/
+  /*min-width: 400px;*/
+  /*margin-top: 25%;*/
   margin-left: auto;
   margin-right: auto;
   margin-bottom: auto;
   padding: 20px;
   text-align: center;
-  font-family: "Gotham-Light";
+  font-family: "Gotham XNarrow";
   font-size: 26px;
-  max-width: 400px;
+  max-width: 600px;
   color: white;
   background-color: rgba(46, 36, 29, 0.57)
 
+}
+
+.a p {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.b p {
+  position: relative;
+  top: 100%;
+  transform: translateY(-150%);
+  margin-left: 30px;
+  text-align: justify;;
+}
+
+.c p {
+  margin-top: 80px;
+}
+
+.d p {
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: 30px;
+  text-align: right;
 }
